--- a/style.css
+++ b/style.css
@@ -5,198 +5,4 @@ Author: URl:
 VersionL: 1.0.0
 */
 
-body {
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-    color: #333;
-}
-
-a:link,
-a:visited{
-    color: #006ec3;
-    text-decoration: none;
-}
-
-p {
-  line-height: 1.65em;
-}
-
-/*General Layout*/
-
-div.container{
-    max-width: 1280px;
-    margin: 0 auto;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
-article.post{
-    border-bottom: 2px dotted #bbbbbb;
-}
-
-article.post:last-of-type {
-    border-bottom: none;
-}
-
-/*Header*/
-.site-header{
-    border-bottom: 2px solid #999;
-}
-
-/*Footer*/
-.site-footer{
-    border-top: 2px solid #999;
-}
-
-/*Navigation Menus*/
-.site-nav ul{
-    margin: 0;
-    padding: 0;
-}
-
-.site-nav ul:before, .site-nav ul:after {
-    content: "";
-    display: table;
-}
-
-.site-nav ul:after{
-    clear: both;
-}
-
-.site-nav{
-    *zoom: 1;
-}
-
-.site-nav ul li{
-    list-style: none;
-    float: left;
-}
-
-/*Site header menu*/
-.site-header nav ul li{
-    margin-right: 5px;
-}
-
-.site-header nav ul li a:link,
-.site-header nav ul li a:visited {
-    display: block;
-    padding: 10px 18px;
-    border: 1px solid #BBB;
-    border-bottom: none;
-    text-decoration: none;
-}
-
-.site-header nav ul li a:hover{
-    background-color: #ECECEC;
-}
-
-.site-header nav ul li.current-menu-item a:link,
-.site-header nav ul li.current-menu-item a:visited,
-.site-header nav ul li.current-page-ancestor a:link,
-.site-header nav ul li.current-page-ancestor a:visited {
-    font-weight: bold;
-    background-color: #006ec3;
-    color: #FFF;
-}
-
-/*Site footer menu*/
-.site-footer nav ul li {
-    margin-right: 10px;
-    padding-right: 10px;
-    border-right: 1px dotted #BBB;
-
-}
-
-/*Page Layout*/
-article.page h2{
-    font-size: 300%;
-}
-
-/*Clearfix */
-.clearfix:before, .clearfix:after {
-    content: "";
-    display: table;
-}
-
-.clearfix:after {clear:both; }
-.clearfix{*zoom: 1; }
-
-/*Two Column Title Layout*/
-div.title-column{
-    width: 30%;
-    float: left;
-}
-
-div.text-column{
-    width: 70%;
-    float: right;
-}
-
-/* Info Box Styles*/
-div.info-box {
-    width: 30%;
-    float: right;
-    margin: 0 0 30px 30px;
-    padding: 20px;
-    background-color: #EEE;
-}
-
-div.info-box h4 {
-    margin-bottom: 6px;
-}
-
-div.info-box p {
-    font-size: 85%;
-}
-
-/*Children Links*/
-.children-links {
-    margin-bottom: 20px;
-    font-size: 80%;
-}
-
-.children-links ul {
-   float: left;
-}
-
-.children-links li {
-    margin-right: 20px;
-}
-
-.children-links .parent-link {
-    float: left;
-    margin-right: 20px;
-    padding-right: 20px;
-    border-right: 1px solid #DDD;
-    font-size: 120%;
-    font-weight: bold;
-}
-
-.children-links .parent-link a:link,
-.children-links .parent-link a:visited{
-    color: #333;
-}
-
-.children-links .current_page_item a:link,
-.children-links .current-page-item a:visited{
-    border-bottom: 1px solid #DDD;
-    color: #333;
-    cursor: default;
-}
-
-/*Post styles*/
-.post h2 {
-    margin-bottom: 0px;
-}
-
-p.post-info {
-    margin-top: 0;
-    font-size: 80%;
-    color: #777;
-}
-
-/*Image Styles*/
-img {
-    max-width: 100%;
-    height: auto;
-}
+@import url('bootstrap.min.css');
